--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">NewProject</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="language1">Spanish</string>
+    <string name="language2">German</string>
+    <string name="language3">Chinese</string>
+    <string name="language4">Arabic</string>
+    <string name="language5">Hebrew</string>
+    <string name="language6">Russian</string>
 </resources>
